@@ -29,6 +29,7 @@
 #include <atomic.h>
 #include <ldsodefs.h>
 #include <tls.h>
+#include <list.h>
 #include <fork.h>
 #include <version.h>
 #include <shlib-compat.h>
